docker-kubernetes/mastering-kubernetes/ch10-networking/external-load-blancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway

spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5000
  selector:
    svc: api-gateway
    app: delinkcious
#
#
# You may also accomplish the same result using a direct kubectl command:
# $ kubectl expose deployment api-gateway --port=80 --target-port=5000 \
# --name=api-gateway --type=LoadBalancer
